# tree-sitter-vb-dotnet

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tree-sitter-vb-dotnet.pc.in
bindings/c/tree_sitter/: tree-sitter-tree-sitter-vb-dotnet.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tree_sitter_vb_dotnet/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTreeSitterVbDotnetTests/: TreeSitterTreeSitterVbDotnetTests.swift
src/: grammar.json  node-types.json
test/: parsed.txt  parsed2.txt  test.js  test1.vb  test2.vb
